[tool.poetry]
name = "chat-research"
version = "0.1.0"
description = "Use ChatGPT to summarize the arXiv papers."
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
arxiv = "^1.4.3"
pymupdf = "^1.21.1"
requests = "^2.28.2"
tiktoken = "^0.3.3"
tenacity = "^8.2.2"
pybase64 = "^1.2.3"
pillow = "^9.5.0"
openai = "^0.27.2"
markdown = "^3.4.3"
bs4 = "^0.0.1"
loguru = "^0.6.0"
rich = "^13.3.3"
pydantic = "^1.10.7"

[tool.poetry.scripts]
chatre = "chat_research.__main__:main"

[tool.ruff]
line-length = 120
extend-ignore = ["E501"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.260"
black = "^23.3.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
ipython = "^8.12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
