[tool.poetry]
name = "chat-research"
version = "0.1.13"
description = "Use ChatGPT to accelerator your research."
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cauliyang/ChatResearch"
repository = "https://github.com/cauliyang/ChatResearch"
documentation = "https://github.com/cauliyang/ChatResearch"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.9"
arxiv = "^1.4.3"
pymupdf = "^1.21.1"
requests = "^2.28.2"
tiktoken = "^0.3.3"
tenacity = "^8.2.2"
pybase64 = "^1.2.3"
pillow = "^9.5.0"
openai = "^0.27.2"
markdown = "^3.4.3"
bs4 = "^0.0.1"
loguru = ">=0.6,<0.8"
rich = "^13.3.3"
pydantic = "^1.10.7"
types-requests = "^2.28.11.17"
toml = "^0.10.2"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
fake-useragent = "^1.1.3"

[tool.poetry.scripts]
chatre = "chat_research.__main__:cli"

[tool.ruff]
line-length = 120
extend-ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.260,<0.0.262"
black = "^23.3.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
ipython = "^8.12.0"
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
